--- a/activities/1.3 sample-using-seaborn.ipynb
+++ b/activities/1.3 sample-using-seaborn.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Exercise 6: Histogram Customization"
+    "# Objective: Use Seaborn and other libraries"
    ]
   },
   {
@@ -13,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TASK: Create a histogram for the following data: data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5].\n",
-    "# Customize the histogram with a title, labels for the x-axis, and a specific color for the bars."
+    "print (\"Hello World\")"
    ]
   }
  ],
