--- a/src/Q1-line-plot-using-matplotlib.ipynb
+++ b/src/Q1-line-plot-using-matplotlib.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Objective: Use Seaborn and other libraries"
+    "### Exercise 1: Create a Line Plot using matplotlib"
    ]
   },
   {
@@ -15,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (\"Hello World\")"
+    "# TASK: Create a line plot with x values ranging from 0 to 10 and y values as the square of x.\n",
+    "# Customize the plot by adding a title, labels for both axes, and a grid."
    ]
   }
  ],
