--- a/src/Q1-line-plot-using-matplotlib.ipynb
+++ b/src/Q1-line-plot-using-matplotlib.ipynb
@@ -16,6 +16,15 @@
     "# TASK: Create a line plot with x values ranging from 0 to 10 and y values as the square of x.\n",
     "# Customize the plot by adding a title, labels for both axes, and a grid."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello World\")"
+   ]
   }
  ],
  "metadata": {
